<resources>
    <string name="app_name">Application</string>
    <string name="close">Zatvori</string>
    <string name="open_new_screen">Otvori novi ekran</string>
    <string name="secondNumber">Drugi broj</string>
    <string name="firstNumber">Prvi broj</string>
    <string name="chooseOperation">Odaberi operaciju</string>
    <string name="calculate">Izračunaj</string>
    <string name="ok">OK</string>
    <string name="sendReport">Pošalji izvještaj</string>
    <string name="emptyString">-</string>
    <string name="maths">Matematika</string>
    <string name="stats">Statistika</string>
</resources>
