<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DisplayActivity">

    <TextView
        android:id="@+id/reportMessage"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_height"
        android:gravity="center"
        android:text="@string/emptyString"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

    <Button
        android:id="@+id/sendReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendReport" />
</LinearLayout>
