<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CalculusActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_height"
        android:gravity="center"
        android:text="@string/chooseOperation"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/operations_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/firstInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:hint="@string/firstNumber"
        android:inputType="number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/secondInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:hint="@string/secondNumber"
        android:inputType="number"
        android:textSize="18sp" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/result"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF" />

</LinearLayout>
